<resources>
    <string name="app_name">Picture Books</string>

    <!-- Login and Register -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="not_a_member_sign_up">Not a member? Sign up!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Sign up</string>
    <string name="e_mail">E-mail</string>
    <string name="already_a_member_sign_in">Already a member? Sign In!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to login</string>

    <!-- Main Menu -->
    <string name="newPage">New Page</string>
    <string name="newSlikovnica">New Picturebook</string>
    <string name="archive">Archive</string>
    <string name="explore">Explore</string>

    <!-- User Profile Settings -->
    <string name="change_password">change password</string>
    <string name="change_email">change e-mail</string>
    <string name="delete_account">delete account</string>
    <string name="sign_out">sign out</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save">Save</string>
    <string name="delete_account_dialog">Are you sure you want to delete this account?</string>
    <string name="confirm">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out_dialog">Are you sure you want to sign out?</string>
    <string name="choose_picture">Choose picture</string>
    <string name="save_picture">Save picture</string>
    <string name="delete_profile_picture">Are you sure you want to delete profile picture?</string>
    <string name="e_mail_word">e-mail:</string>
    <string name="first_name_word">first name:</string>
    <string name="last_name_word">last name:</string>
    <string name="take_picture">Take picture</string>

    <!-- New Picturebook -->
    <string name="picturebookId">picturebookId</string>
    <string name="discard">Discard</string>
    <string name="title">Title</string>
    <string name="summary">Summary</string>
    <string name="discard_picturebook_dialog">Are you sure you want to discard this picturebook?</string>
    <string name="add_page">Add page</string>

    <!-- Single Picturebook -->
    <string name="publish_picturebook_dialog">Are you sure you want to publish this picturebook? If picturebook is public, you can\'t edit it!</string>
    <string name="make_private">Make private</string>
    <string name="private_picturebook_dialog">Are you sure you want to make this picturebook private?</string>
    <string name="publish">Publish</string>
    <string name="picturebook_id">picturebookId</string>
    <string name="delete_picture_book">Delete picture book</string>
    <string name="status">Status:</string>
    <string name="title_single_picturebook">Title:</string>
    <string name="summary_single_picturebook">Summary:</string>
    <string name="delete_single_picturebook_dialog">Are you sure you want to delete this picturebook?</string>
    <string name="edit_pages">edit pages</string>
    <string name="reset">reset</string>
    <string name="caption">caption:</string>

    <!-- Explore -->
    <string name="author">Author:</string>
    <string name="follow">Follow</string>

    <!-- New Page -->
    <string name="photo">Photo</string>
    <string name="new_page">new</string>

</resources>