<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_profile.Register"
    android:gravity="center"
    android:padding="70dp">

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/first_name"
            android:hint="@string/first_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextFirstName"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/last_name"
            android:hint="@string/last_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextLastName"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/e_mail"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPassword"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPassword2"
            android:layout_alignEnd="@+id/editTextPassword2"
            android:layout_alignRight="@+id/editTextPassword2"
            android:fontFamily="@font/vast_shadow"
            android:text="@string/register"
            android:textColor=" #6a1b76"
            android:textStyle="bold"
            app:backgroundTint="#fee157"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/buttonRedirectToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonConfirm"
            android:fontFamily="@font/vast_shadow"
            android:text="@string/already_a_member_sign_in"
            android:textColor="#6a1b76"
            android:textSize="9sp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp" />

</RelativeLayout>