<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_profile.PasswordReset"
    android:gravity="center"
    android:padding="70dp">

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/e_mail"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputEmail"
        android:fontFamily="@font/vast_shadow"
        android:text="@string/reset_password"
        android:textColor="#6a1b76"
        android:textStyle="bold"
        app:backgroundTint="#fde056"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/backToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSendEmail"
        android:fontFamily="@font/vast_shadow"
        android:text="@string/back_to_login"
        android:textColor="#fde056"
        android:textStyle="bold"
        app:backgroundTint="#c687e0"
        app:cornerRadius="10dp" />


</RelativeLayout>