<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_profile.ChangePassword"
    android:gravity="center"
    android:padding="70dp">

    <EditText
        android:id="@+id/inputNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/new_password"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/inputNewPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputNewPassword"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/confirm_new_password"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonChangePasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputNewPasswordConfirm"
        android:fontFamily="@font/vast_shadow"
        android:text="@string/change_password"
        android:textColor="#6a1b76"
        android:textStyle="bold"
        app:backgroundTint="#fde056"
        app:cornerRadius="10dp" />

</RelativeLayout>