<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".editpage.NewPage">

    <com.example.project.editpage.widget.PaintView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/paint_view"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#b74bc2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonResetNewPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/vast_shadow"
            android:text="@string/reset"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="#6a1b76"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/buttonSavePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/vast_shadow"
            android:text="@string/save"
            android:textColor="#6a1b76"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="#fee157"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/buttonTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/vast_shadow"
            android:text="@string/take_picture"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="#c788e1"
            app:cornerRadius="10dp" />

    </LinearLayout>

</LinearLayout>