<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButtonNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@null"
            app:srcCompat="@drawable/settings" />

        <ImageView
            android:id="@+id/imageButtonProfile"
            android:layout_width="78dp"
            android:layout_height="83dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:foreground="@drawable/rounded_frame" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="180dp">

            <ImageButton
                android:id="@+id/buttonNewPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/newpage"
                android:text="@string/newPage" />
            <ImageButton
                android:id="@+id/buttonNewPicturebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/newSlikovnica"
                android:layout_below="@+id/buttonNewPage"
                android:src="@drawable/newpicturebook"
                android:background="@null"/>

            <ImageButton
                android:id="@+id/buttonArchive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/archive"
                android:layout_below="@+id/buttonNewPicturebook"
                android:src="@drawable/archive"
                android:background="@null"/>

            <ImageButton
                android:id="@+id/buttonExplore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/explore"
                android:layout_below="@+id/buttonArchive"
                android:src="@drawable/ex"
                android:background="@null"/>

            <ImageButton
                android:id="@+id/buttonPending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonExplore"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:src="@drawable/pendingpicturebooks"
                android:text="Pending Picturebooks"
                android:visibility="invisible"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>